# libmatrix

./: .directory  .gitignore  .travis.yml  CMakeLists.txt  README.md  main.c  main_1.c  makefile  makefile1  matrix  matrix.c  matrix.h  matrix_documentation.odt  matrix_documentation_en.odt
Anjuta_matrix/: .anjuta_sym_db.db  Makefile  main.c  matrix  matrix.c  matrix.h
Anjuta_matrix/.anjuta/: default.profile
Anjuta_matrix/.anjuta/session/: anjuta.session  dock-layout.xml
Anjuta_matrix/Debug/Debug/: matrix
DOCKS/: matrix_documentation_EN.odt  matrix_documentation_PL.odt
copy/: data  main.c  makefile  matrix  matrix.c  matrix.h
foobar/: foobar.c
